welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: value recule is not a member of Unit
possible cause: maybe a semicolon is missing before `value recule'?
  }recule();recule();recule();recule();recule();recule()
   ^Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
    return
    ^Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit){
  ^