welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit = false
  for (i <- 1 to 6){
    avance()
    if (estSurBiscuit()){
      vuBiscuit = true
    }
  }recule();recule();recule();recule();recule();recule()
  if (vuBiscuit){
    return
  }
}